# metaothello

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
data/classic/: board_probe_train_config.json  train_config.json
data/classic_delflank/: board_probe_train_config.json  train_config.json
data/classic_iago/: board_probe_train_config.json  train_config.json
data/classic_nomidflip/: analytic_probe.ckpt  board_probe_train_config.json  train_config.json
data/classic_nomidflip/board_probes/: classic_board_L1.ckpt  classic_board_L2.ckpt  classic_board_L3.ckpt  classic_board_L4.ckpt  classic_board_L5.ckpt  classic_board_L6.ckpt  classic_board_L7.ckpt  classic_board_L8.ckpt  nomidflip_board_L1.ckpt  nomidflip_board_L2.ckpt  nomidflip_board_L3.ckpt  nomidflip_board_L4.ckpt  nomidflip_board_L5.ckpt  nomidflip_board_L6.ckpt  nomidflip_board_L7.ckpt  nomidflip_board_L8.ckpt
data/classic_nomidflip/game_probes/: game_L1.ckpt  game_L2.ckpt  game_L3.ckpt  game_L4.ckpt  game_L5.ckpt  game_L6.ckpt  game_L7.ckpt  game_L8.ckpt
data/delflank/: board_probe_train_config.json  train_config.json
data/iago/: board_probe_train_config.json  train_config.json
data/nomidflip/: board_probe_train_config.json  train_config.json
metaothello/: analysis_utils.py  games.py  metaothello.py  plotting.py
metaothello/mingpt/: trainer.py  utils.py
metaothello/rules/: update.py  validation.py
scripts/: board_probe_train.py  cache_activations.py  download.py  download_models.py  download_probes.py  game_probe_train.py  generate_activations.py  generate_data.py  gpt_train.py
scripts/analysis/: Makefile
scripts/analysis/activation_similarity/: compute_activation_cosine_sim.py  plot_activation_cosine_sim_over_moves.py
scripts/analysis/board_probe_accuracy/: compute_board_probe_accuracy.py  plot_board_probe_accuracy_aggregated.py  plot_board_probe_accuracy_over_moves.py
scripts/analysis/disagreement_geometry/: compute_disagreement_geometry.py  plot_disagreement_vs_cosine.py  plot_disagreement_vs_principal_angle.py
scripts/analysis/divergence_dynamics/: compute_game_probe_fidelity.py  compute_probe_accuracy_differing.py  compute_steering_nomidflip.py  plot_figure5.py
scripts/analysis/iago/: compute_iago_alignment.py  plot_iago_alignment.py
scripts/analysis/intervention_evaluation/: compute_intervention_eval.py  plot_intervention_cosine.py  plot_intervention_global.py
scripts/analysis/model_accuracy/: compute_model_accuracy.py  plot_model_accuracy_aggregated.py  plot_model_accuracy_over_moves.py
scripts/analysis/prob_collapse/: compute_prob_collapse.py  plot_prob_collapse.py
scripts/analysis/probe_weight_similarity/: plot_cosine_sim_aggregated.py  plot_cosine_sim_by_layer.py  plot_tile_state_pca.py  plot_tile_state_similarity.py
scripts/analysis/steering_delflank/: compute_probe_effect_delflank.py  compute_steering_delflank.py  plot_figure6.py
tests/: conftest.py  sample.py  test_constants.py  test_edge_cases.py  test_games.py  test_metaothello.py  test_plot.py  test_rules.py  test_tokenizer.py
